# super-license-scanner

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
src/: archive_handler.rs  github_api.rs  license_checker.rs  license_detection.rs  license_urls.rs  lockfile_parser.rs  main.rs  npm_api.rs  package.rs  package_info.rs  utils.rs
src/parsers/: mod.rs  npm_parser.rs  nuget_parser.rs  poetry_parser.rs  yarn_parser.rs
