[package]
name = "super-license-scanner"
version = "0.1.0"
edition = "2021"
license = "PIF"
description = "A tool for recursively scanning dependency trees to extract their license info"
authors = ["space"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.13"
regex = "1.7"
urlencoding = "2.1"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
once_cell = "1.13"
yarn-lock-parser = "0.3"
package-lock-json-parser = "0.1"
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
tempfile = "3.5"
toml = "0.7.4"  # Add toml parser for poetry.lock files
